# designs

./: .gitignore  README.md
.fleet/: run.json
c/: CMakeLists.txt  cTest.sh  sanitizer.cmake
c/src/: CMakeLists.txt
c/src/paradigm/: CMakeLists.txt  tests.cmake
c/src/paradigm/generic/container/: CMakeLists.txt  container_test.c  readme.txt
c/src/paradigm/oop/: CMakeLists.txt  readme.md
c/src/paradigm/oop/class/: CMakeLists.txt  cow.h  cow_test.c
c/src/paradigm/oop/inheritance/: CMakeLists.txt  cow.h  cow_test.c  mammal.h  sheep.h  sheep_test.c
c/src/paradigm/oop/polymorphism/: CMakeLists.txt  cow.h  cow_test.c  mammal.h  readme.txt  sheep.h  sheep_test.c
c/test/dp/: CMakeLists.txt
c/test/paradigm/: tests.cmake
c/test/paradigm/oop/: CMakeLists.txt
c/test/paradigm/oop/polymorphism/: CMakeLists.txt
cpp/: CMakeLists.txt  DP.code-workspace  cTest.sh  sanitizer.cmake
cpp/src/: CMakeLists.txt  tests.cmake
cpp/src/closure/polymorphism/: CMakeLists.txt  mammal.hpp  mammal_test.cpp  readme.txt
cpp/src/paradigm/: CMakeLists.txt  tests.cmake
cpp/src/paradigm/generic/container/: CMakeLists.txt  container_test.cpp
go/: Dockerfile  go.mod
go/closure/polymorphism/: closure.go  closure_test.go  mammal.go  mammal_test.go
go/paradigm/generic/container/: container_test.go
go/paradigm/generic/container/emptyInterface/: readme.txt
go/paradigm/oop/polymorphism/: go.mod
java/: pom.xml
java/.devcontainer/: devcontainer.json
java/src/closure/polymorphism/: Mammal.java  MammalTest.java
java/src/paradigm/generic/container/: ContainerTest.java  readme.txt
python/: Dockerfile
python/src/closure/polymorphism/: mammal.py  readme.txt  test_mammal.py
